<resources>
    <string name="app_name">Vet</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="check_number">Check Number</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="email">Email</string>
    <string name="license_number">license number</string>
    <string name="address">Address</string>
    <string name="agree_to_the_terms_and_conditions">Agree to the terms and conditions</string>
    <string name="resend">Resend</string>
    <string name="enter_the_confirmation_code">Enter the confirmation code</string>
    <string name="an_identification_code_has_been_sent_to_the_mobile_number">An identification code has been sent to the mobile number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_already_exists">phone already exists</string>
    <string name="phone_is_required">Phone number is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="name_is_required">Name is required</string>
    <string name="short_pass">Password is too short</string>
    <string name="password_not_match">Passwords Not Match</string>
    <string name="email_required">Email is required</string>
    <string name="address_required">Address is required</string>
    <string name="license_required">license Number is required</string>
    <string name="location">Location</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="menu">Menu</string>
    <string name="payments">Payments</string>
    <string name="profile">Profile</string>
    <string name="technical_support">Technical support</string>
    <string name="Fee_Payment">Fee Payment</string>
    <string name="confirem_order">confirm order</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About Us</string>
    <string name="notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="share_vet">Share VET</string>
    <string name="rate_vet">Rate VET</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="pending_amount">Pending Amount</string>
    <string name="amount_to_be_withdrawn">Amount to be withdrawn</string>
    <string name="bank_data">bank data</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_owner_name">account owner name</string>
    <string name="account_number">Account Number</string>
    <string name="withdraw">Withdraw</string>
    <string name="amount_available_to_withdraw">Amount available to withdraw</string>
    <string name="examination_fee">Examination fee</string>
    <string name="specializations">Specializations</string>
    <string name="another_images_for_the_clinic">Another Images For The Clinic</string>
    <string name="clinic_timings">Clinic timings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="save">Save</string>
    <string name="the_amount_has_been_withdrawn_successfully">The amount has been withdrawn successfully</string>
    <string name="withdrawal_failed">Withdrawal failed</string>
    <string name="language">Language</string>
    <string name="ar">Arabic</string>
    <string name="en">English</string>
    <string name="the_consultants">The Consultants</string>
    <string name="finished">finished</string>
    <string name="current">current</string>
    <string name="newc">new</string>
    <string name="consultant_date">Consultant Date:</string>
    <string name="consultant_number">consultant number:</string>
    <string name="finished_consultant">finished consultant</string>
    <string name="current_consultant">current consultant</string>
    <string name="new_consultant">new consultant</string>
    <string name="consultant_details">consultant details</string>
    <string name="previous_consultant">Previous Consultant</string>
    <string name="consultant_info">Consultant Info</string>
    <string name="consultant_date1">Consultant Date:</string>
    <string name="consultant_time1">Consultant time:</string>
    <string name="consultant_type1">Consultant type:</string>
    <string name="consultant_duration1">Consultant duration:</string>
    <string name="pet_info">Pet Info</string>
    <string name="pet_details1"><u>Pet Details</u></string>
    <string name="address1"><u>Address</u></string>
    <string name="notes">Notes</string>
    <string name="attached_images">Attached Images</string>
    <string name="reject">reject</string>
    <string name="accept">Accept</string>
    <string name="add_details1">Add Details</string>
    <string name="new_consultant1">new consultant</string>
    <string name="current_consultant_paid">current consultant - paid</string>
    <string name="current_consultant_not_paid">current consultant - not paid</string>
    <string name="animal_type">Animal Type</string>
    <string name="animal_gender">Animal Gender</string>
    <string name="animal_age">Animal Age</string>
    <string name="animal_wieght">Animal Wieght</string>
    <string name="previous_reports">Previous Reports</string>
    <string name="medicines">Medicines</string>
    <string name="vaccinations">Vaccinations</string>
    <string name="report1">Report</string>
    <string name="medicines1">Medicines</string>
    <string name="vaccination1">Vaccination</string>
    <string name="okay">Okay</string>
    <string name="reviews">Reviews</string>
    <string name="comments">Comments</string>
    <string name="delete_account1">Delete Account</string>
    <string name="are_you_sure_you_want_to_delete_the_account">Are you sure you want to delete the account?</string>
    <string name="yes_delete">Yes Delete</string>
    <string name="no">No</string>
    <string name="profile_updated_successfully">profile updated successfully</string>
    <string name="time_added_successfully">time added successfully</string>
    <string name="time_deleted_successfully">time deleted successfully</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="chat">Chat</string>
    <string name="message">message</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborumnumquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentiumoptio, eaque rerum! Provident similique accusantium nemo autem. Veritatisobcaecati tenetur iure eius earum ut molestias architecto voluptate aliquamnihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eossapiente officiis modi at sunt excepturi expedita sint? Sed quibusdamrecusandae alias error harum maxime adipisci amet laborum.</string>
    <string name="add_report">Add Report</string>
    <string name="add_medicines">Add Medicines</string>
    <string name="added_reports_and_medicines">Added Reports And Medicines</string>
    <string name="add">add</string>
    <string name="fit">Fit</string>
    <string name="unfit">Unfit</string>
    <string name="rejected_consultant">consultant rejected</string>
    <string name="accepted_consultant">consultant accepted</string>
    <string name="report_added">report added</string>
    <string name="clinic_details">Clinic Details</string>
    <string name="Rs">RS</string>
    <string name="cart">Cart</string>
    <string name="consult_duration">Consult Duration</string>
    <string name="duration1">m</string>
    <string name="image">image</string>
    <string name="chat1">Chat</string>
    <string name="share_with">share with</string>
    <string name="name">name</string>
    <string name="search_for_doctor">Search for doctor</string>
    <string name="specialties">Specialties</string>
    <string name="aviliable_now">Available now</string>
    <string name="most_rated">Most Rated</string>
    <string name="pending">Pending</string>
    <string name="doctor_name">Doctor name:</string>
    <string name="doctor_info">Doctor info</string>
    <string name="doctor_report">Doctor Report</string>
    <string name="report">Report</string>
    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="pending_consultant1">pending consultant</string>
    <string name="previous_consultant1">previous consultant</string>
    <string name="current_consultant1">current consultant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_pet">add new pet</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_type">Pet Type</string>
    <string name="pet_breed">pet breed</string>
    <string name="pet_gender">Pet Gender</string>
    <string name="sterile_non_sterile">sterile/non-sterile</string>
    <string name="pet_weight">Pet Weight</string>
    <string name="kg">Kg</string>
    <string name="pet_age">Pet Age</string>
    <string name="pet_birthday">Pet BirthDay</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="pet_image">Pet Image</string>
    <string name="year">Year</string>
    <string name="added_pet">pet added</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="search">Search</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="vaccination_book">Vaccination book</string>
    <string name="previous_consultant2">Previous Consultant</string>
    <string name="add_vaccination">add vaccination</string>
    <string name="vaccination_date">Vaccination Date:</string>
    <string name="vaccination_name">Vaccination Name:</string>
    <string name="choose_vaccination">Choose Vaccination</string>
    <string name="vaccination_date1">Vaccination date</string>
    <string name="vaccination_added">Vaccination added</string>
    <string name="report_date">Report Date:</string>
    <string name="details">Details</string>
    <string name="medicine_date">medicine date:</string>
    <string name="users_reviews">Users Reviews</string>
    <string name="doctor_profile">Doctor profile</string>
    <string name="licence_number">Licence Number</string>
    <string name="request_consultation">Request Consultation</string>
    <string name="show_all">Show All</string>
    <string name="consultation_request">Consultation request</string>
    <string name="counseling_type">Counseling type</string>
    <string name="select_the_duration_of_the_consultation">Select the duration of the consultation</string>
    <string name="select_the_date">Select the date</string>
    <string name="select_the_time">select the time</string>
    <string name="no_times">لا يوجد مواعيد متاحة</string>
    <string name="locate_the_home_address_via_google_maps">Locate the home address via Google Maps</string>
    <string name="consultation_details">Consultation details</string>
    <string name="send">Send</string>
    <string name="attachments">attachments</string>
    <string name="loading">loading..</string>
    <string name="error_location_address">Unknown Location</string>
    <string name="order_date">Order Date</string>
    <string name="medicine_name">medicine name:</string>
    <string name="quantity1">Quantity:</string>
    <string name="order_status">Order Status:</string>
</resources>