<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.consultants.MyConsultantsInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/consultant_info"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v1"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@color/grey_200"
            app:layout_constraintBottom_toBottomOf="@+id/tv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv1"
            app:layout_constraintTop_toTopOf="@+id/tv1" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/consultant_number"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv2"
            app:layout_constraintStart_toEndOf="@+id/tv2"
            app:layout_constraintTop_toTopOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_date1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv3"
            app:layout_constraintStart_toEndOf="@+id/tv3"
            app:layout_constraintTop_toTopOf="@+id/tv3" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_time1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv3"
            app:layout_constraintTop_toBottomOf="@+id/tv3" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv4"
            app:layout_constraintStart_toEndOf="@+id/tv4"
            app:layout_constraintTop_toTopOf="@+id/tv4" />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_type1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv4"
            app:layout_constraintTop_toBottomOf="@+id/tv4" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv5"
            app:layout_constraintStart_toEndOf="@+id/tv5"
            app:layout_constraintTop_toTopOf="@+id/tv5" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/consultant_duration1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="@+id/tv5"
            app:layout_constraintTop_toBottomOf="@+id/tv5" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv6"
            app:layout_constraintStart_toEndOf="@+id/tv6"
            app:layout_constraintTop_toTopOf="@+id/tv6" />

        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/doctor_info"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv6" />

        <View
            android:id="@+id/v2"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:background="@color/grey_200"
            app:layout_constraintBottom_toBottomOf="@+id/tv7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv7"
            app:layout_constraintTop_toTopOf="@+id/tv7" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_doctor"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@+id/tv7"
            app:layout_constraintTop_toBottomOf="@+id/tv7"
            app:riv_corner_radius="@dimen/_30sdp" />

        <TextView
            android:id="@+id/tv_doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_doctor"
            app:layout_constraintStart_toEndOf="@+id/iv_doctor"
            app:layout_constraintTop_toTopOf="@+id/iv_doctor" />

        <TextView
            android:id="@+id/tv_doctorSpe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@+id/tv_doctorName"
            app:layout_constraintStart_toStartOf="@+id/tv_doctorName"
            app:layout_constraintTop_toBottomOf="@+id/tv_doctorName" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/_32sdp"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_doctor">

            <TextView
                android:id="@+id/tv211"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/doctor_report"
                android:textColor="@color/light_black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_body_parts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv211"
                tools:itemCount="2"
                tools:listitem="@layout/item_body_parts_status" />

            <TextView
                android:id="@+id/tv21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/report"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_body_parts" />

            <LinearLayout
                android:id="@+id/ll_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/full_border_radius_12"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv21">


                <TextView
                    android:id="@+id/tv_report"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="start"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/medicines"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_report" />

            <LinearLayout
                android:id="@+id/ll_medicine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/full_border_radius_12"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv22">


                <TextView
                    android:id="@+id/tv_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="start"
                    android:importantForAutofill="no"
                    android:padding="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_chat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_margin="@dimen/_12sdp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/chat1"
            android:visibility="gone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_report" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_margin="@dimen/_12sdp"
            android:backgroundTint="@color/light_red"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/red_500"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_margin="@dimen/_12sdp"
            android:backgroundTint="@color/light_green"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>